Fixed a width issue with the level boxes on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ a {
 
 .level {
   width: 90%;
-  min-width: 70%;
+  min-width: 50%;
   height: 20px;
   border: 1px solid black;
 }
